[gd_scene load_steps=12 format=2]

[ext_resource path="res://Music/lvl_2_KESZ.ogg" type="AudioStream" id=1]
[ext_resource path="res://Music/bossfight_KESZ.ogg" type="AudioStream" id=2]
[ext_resource path="res://Music/MusicPlayer.gd" type="Script" id=3]
[ext_resource path="res://Music/lvl_1_KESZ.ogg" type="AudioStream" id=4]
[ext_resource path="res://Music/menu_KESZ.ogg" type="AudioStream" id=5]
[ext_resource path="res://Music/win_KESZ.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "FadeToBoss"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayerBoss:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -4.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayerGame:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayerBoss")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "play"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioStreamPlayerGame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayerMenu:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AudioStreamPlayerMenu")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayerLevel2:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("AudioStreamPlayerLevel2")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AudioStreamPlayerEnd:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("AudioStreamPlayerEnd")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayerMenu:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayerGame:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayerMenu")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioStreamPlayerGame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayerLevel2:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AudioStreamPlayerLevel2")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayerBoss:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("AudioStreamPlayerBoss")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AudioStreamPlayerEnd:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("AudioStreamPlayerEnd")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayerLevel2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -4.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayerGame:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayerLevel2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "play"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioStreamPlayerGame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayerMenu:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AudioStreamPlayerMenu")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayerBoss:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("AudioStreamPlayerBoss")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AudioStreamPlayerEnd:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("AudioStreamPlayerEnd")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayerMenu:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -4.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayerGame:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayerMenu")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "play"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioStreamPlayerGame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayerLevel2:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AudioStreamPlayerLevel2")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayerBoss:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("AudioStreamPlayerBoss")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AudioStreamPlayerEnd:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("AudioStreamPlayerEnd")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeToWin"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayerEnd:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -4.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayerGame:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayerEnd")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0 ],
"method": "play"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioStreamPlayerGame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayerMenu:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("AudioStreamPlayerMenu")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayerLevel2:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("AudioStreamPlayerLevel2")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AudioStreamPlayerBoss:volume_db")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -4.0, -80.0 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("AudioStreamPlayerBoss")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[node name="MusicPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="AudioStreamPlayerMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0
bus = "Music"

[node name="AudioStreamPlayerGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0
bus = "Music"

[node name="AudioStreamPlayerLevel2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -4.0
bus = "Music"

[node name="AudioStreamPlayerBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.0
bus = "Music"

[node name="AudioStreamPlayerEnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -4.0
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToBoss = SubResource( 1 )
anims/FadeToGame = SubResource( 2 )
anims/FadeToLevel2 = SubResource( 3 )
anims/FadeToMenu = SubResource( 4 )
anims/FadeToWin = SubResource( 5 )
